Datavec usage to train network #346